# todone

./: .dockerignore  .env.example  .gitignore  .justfile  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  insomnia.json  sqlx-data.json
migrations/: 20221008141756_users.sql  20221023115900_todos.sql
todone-backend/: Cargo.toml  sqlx-data.json
todone-backend/migrations/: 20221008141329_setup.sql
todone-backend/src/: config.rs  error.rs  jwt.rs  lib.rs  main.rs  password.rs
todone-backend/src/endpoints/: login.rs  mod.rs  todos.rs
todone-backend/src/models/: todo.rs  user.rs
todone-backend/tests/: common.rs  user.rs
todone-core/: Cargo.toml
todone-frontend/: Cargo.toml  index.html
todone-frontend/src/: main.rs
