[package]
name = "todone-backend"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
argon2 = "0.4.1"
async-trait = "0.1.58"
axum = { version = "0.6.0-rc.2", features = ["headers", "tower-log"] }
chrono = "0.4.22"
clap = { version = "4.0.10", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.9.1"
jsonwebtoken = "8.1.1"
log = "0.4.17"
once_cell = "1.15.0"
rand = "0.8.5"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_with = { version = "2.0.0" }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls" , "postgres", "offline", "uuid"] }
thiserror = "1.0.37"
todone-core = { path = "../todone-core", features = ["back"] }
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.2.1", features = ["serde"] }
validator = { version = "0.16.0", features = ["derive"] }
