[package]
name = "todone-backend"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
argon2 = "0.4.1"
async-trait = "0.1.58"
axum = { version = "0.6.0", features = ["headers", "tower-log"] }
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive", "env"] }
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
once_cell = "1.16.0"
rand = "0.8.5"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_with = { version = "2.1.0" }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls" , "postgres", "offline", "uuid", "migrate"] }
thiserror = "1.0.37"
todone-core = { path = "../todone-core", features = ["back"] }
tokio = { version = "1.22.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = { version = "0.1.37", features = [] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.2", features = ["serde"] }
validator = { version = "0.16.0", features = ["derive"] }
