[package]
name = "todone-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
back = ["dep:sqlx", "dep:tokio", "dep:argon2", "dep:rand"]
front = []

[dependencies]
anyhow = "1.0.65"
argon2 = { version = "0.4.1", optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6.2", optional = true, features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1.21.2", optional = true, features = ["full"] }


